# yt-factory

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  RECOMMENDATIONS.md  ROADMAP.md  TASK.md  TASKS.md  TESTING.md  VERIFY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/commands/: new-project.md  sync-tasks.md  verify.md
.cursor/commands/: cu_next.md
.cursor/rules/: 01-definition-of-done.md  02-testing.md  03-branch-only.md  agent-execution.md
.github/workflows/: ci.yml
assets/brand/cafe_jazz/: README.md
assets/soundbank/: soundbank.json
channels/: cafe_jazz.yaml  dnb_focus.yaml  fantasy_reading.yaml  fantasy_tavern.yaml  lofi_study.yaml  sleep_ambience.yaml  tinnitus_relief.yaml
docs/: 00_OVERVIEW.md  01_WORKFLOW.md  03_PROJECT_SCHEMA.md  04_LOGGING_AND_DEBUGGING.md  05_PROVIDERS_GEMINI.md  06_PROVIDERS_SUNO.md  07_RENDERING_FFMPEG.md  08_YOUTUBE_UPLOAD.md  10_GUI_LATER.md  DECISIONS.md  DEFINITION_OF_DONE.md  ERRORS_AND_RECOVERY.md  README.md  ROADMAP.md  TASKS.md  YOUTUBE_FACTORY_PROJECT_OVERVIEW.md
docs/architecture/: system-design.md
docs/future/: server-storage.md
docs/providers/: ffmpeg.md  soundbank.md  suno.md
docs/refs/: SUNO_API.md
docs/research/: tinnitus_channels_research.md
docs/workflow/: definition-of-done.md  logging.md  pipeline.md
migration/: repo_snapshot.txt
scripts/: verify.sh
specs/2026-01-04-siasola-adoption/: acceptance.md  evidence.md  problem.md  scope.md  tasks.md  tests.md
specs/_templates/: acceptance.md  evidence.md  problem.md  scope.md  tasks.md  tests.md
src/ytf/: __init__.py  __main__.py  channel.py  cli.py  cli_logs.py  doctor.py  logger.py  project.py  runner.py  soundbank.py
src/ytf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ytf/providers/: __init__.py  freesound.py  gemini.py  pixabay.py  suno.py  youtube.py
src/ytf/steps/: __init__.py  generate.py  generate_new.py  new.py  plan.py  queue.py  render.py  review.py  upload.py
src/ytf/tools/: __init__.py  tasks.py
src/ytf/utils/: __init__.py  ffmpeg.py  ffprobe.py  log_summary.py  qc.py  retry.py
tests/: __init__.py  test_project_schema.py
