[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytf"
version = "0.1.0"
description = "Local-first automation pipeline to generate music compilations and upload to YouTube"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ytf = "ytf.cli:app"

[tool.setuptools]
packages = ["ytf"]

[tool.setuptools.package-dir]
"" = "src"

