[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytf"
version = "0.1.0"
description = "Local-first automation pipeline to generate music compilations and upload to YouTube"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "google-genai>=0.2.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "rich>=10.11.0",
]

[project.scripts]
ytf = "ytf.cli:app"

[tool.setuptools]
packages = ["ytf"]

[tool.setuptools.package-dir]
"" = "src"

