[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytf"
version = "0.1.0"
description = "Local-first automation pipeline to generate music compilations and upload to YouTube"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "google-genai>=0.2.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "rich>=10.11.0",
]

[project.scripts]
ytf = "ytf.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["ytf"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = [
    "E501",   # Line too long (handled by black)
    "UP036",  # Version block for minimum Python (intentional)
    "B904",   # Exception chaining (acceptable)
    "B905",   # zip() without strict= (acceptable)
    "F841",   # Unused variables (to be cleaned up separately)
]

